# robaka-ros

./: CMakeLists.txt  README.md  package.xml  setup.py
conf/: default.rviz  laser_filters.yaml  odom_navigation_demo.rviz  robaka.lua  robaka.perspective  robaka_localization.lua  robot_localization.yaml  twist_mux.yaml
conf/cartographer/: assets_writer.lua  robaka.lua
conf/imu/: imu_calib.yaml
conf/navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
conf/navigation/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
conf/navigation/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
conf/semantic-segmentation/: costmap_params.yaml  homography.xml  homography2.xml  homography3.xml  homography4.xml  homography5.xml  parameters.yml
doc/semantic-segmentation/: README.md  dynamic-reconfigure.yaml  homography_export.yaml
launch/: airobaka.launch  amcl_demo.launch  ar_track.launch  assets_writer.launch  cart.launch  headlessrobaka.launch  move_base_main.launch  odom_navigation_demo.launch  offline_slam.launch  online_slam.launch  online_slam_and_move.launch  robaka.launch  robaka_cartographer_localization.launch  rtabmap.launch  slammingcart.launch  slammingrobaka.launch  uirobaka.launch
launch/include/: amcl.launch  imu.launch  move_base.launch
launch/viz/: robaka_base_rviz.launch  robaka_base_rviz_gazebo.launch
maps/: map2.pgm  map2.yaml  map3.pgm  map3.yaml
nodes/: robaka_go_to_goal
src/: ar_tag_tracker.py  cartographer_tf_to_odom.cpp  display.py
src/robaka/: goal_controller.py
urdf/: robaka_v2.xacro  robaka_v2_gazebo_plugins.xacro
