<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>robaka</name>
  <version>1.0.0</version>
  <description>
    Robaka package. Uses diff_drive from Mark Rose (I'll add it as a proper dependency later).
  </description>
  <author>Alex Makarov</author>
  <maintainer email="road.and.track@gmail.com">Alex Makarov</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
</package>
