<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>robaka</name>
  <version>1.0.0</version>
  <description>
    Robaka package. Uses diff_drive from Mark Rose (I'll add it as a proper dependency later).
  </description>
  <author>Alex Makarov</author>
  <maintainer email="road.and.track@gmail.com">Alex Makarov</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>rosserial_arduino</depend>
  <depend>rviz_imu_plugin</depend>
  <depend>teleop_twist_keyboard</depend>
  <!-- <depend>ydlidar</depend> -->
  <depend>cartographer</depend>
  <depend>amcl</depend>
  <depend>move_base</depend>
  <depend>map_server</depend>
  <depend>range_sensor_layer</depend>
</package>
