<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>robaka</name>
  <version>1.0.1</version>
  <description>
    Robaka package.
  </description>
  <author>Alex Makarov</author>
  <maintainer email="road.and.track@gmail.com">Alex Makarov</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>rosserial_arduino</depend>
  <depend>rviz_imu_plugin</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>cartographer</depend>
  <depend>amcl</depend>
  <depend>move_base</depend>
  <depend>map_server</depend>
  <depend>range_sensor_layer</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>robot_localization</depend>
  <depend>teb_local_planner</depend>
  <depend>global_planner</depend>
  <depend>dwa_local_planner</depend>
  <depend>twist_mux</depend>
  <depend>nmea_navsat_driver</depend>
  <depend>realsense2_camera</depend>
  <depend>laser_filters</depend>
  <depend>ar_track_alvar</depend>
</package>
